Thu, 21 Jun 2007 16:03:42 +0200 <thp@perli.net>
        * data/messages.pot: Re-generated messages.pot with new strings
        * data/po/*.po: Updated translations from Launchpad.net Rosetta
        * bin/gpodder: Version + release date push

Tue, 19 Jun 2007 19:38:38 +0200 <thp@perli.net>
        * TODO: Updated TODO list (skip button for channel refetch)

Mon, 11 Jun 2007 08:01:23 +0200 <thp@perli.net>
        * src/gpodder/libopmlreader.py: Import liblogger's log() function,
          thanks to Nick (nikosapi) for reporting

Mon, 11 Jun 2007 07:28:00 +0200 <thp@perli.net>
        * src/gpodder/libipodsync.py: Re-organized the track length detection
          algorithm to prefer mplayer before any other method; this fixes a 
          bug for enhanced AAC files; thanks to Götz Waschk <goetz.waschk at 
          gmail.com> for reporting
        * bin/gpodder: Version + release date push

Wed,  6 Jun 2007 13:52:52 +0200 <thp@perli.net>
        * src/gpodder/console.py: Use urllib.unquote() for URLs that are 
          printed in the CLI interface, so we don't get a bt when there is a
          '%'-escaped URL; thanks to Thomas Matthijs <axxo keanu.be> for 
          testing the CLI, reporting the bug and suggesting this fix
        * src/gpodder/libpodcasts.py: Use urllib.unquote() for error messages
          so that there's no problem with '%' in the CLI
        * bin/gpodder: Version + release date push

Sun,  3 Jun 2007 15:41:30 +0200 <thp@perli.net>
        * src/gpodder/console.py: Fix a problem with URLs containing the "%"
          character and Python format strings; thanks go out to Thomas 
          Matthijs <axxo gentoo.org> for reporting this bug and help fixing it

Fri, 25 May 2007 12:04:20 +0200 <thp@perli.net>
        * src/gpodder/gpodder.py: Update the feed cache after everything
          else has been changed, so that we now really have a working 
          update-on-startup option; thanks to Götz Waschk and Stephan Buys