@@ -1,3 +1,6 @@
+Thu, 21 Jun 2007 16:13:56 +0200 <thp@perli.net>
+        * Makefile: Add support for creating a translations tarball
+
 Thu, 21 Jun 2007 16:03:42 +0200 <thp@perli.net>
         * data/messages.pot: Re-generated messages.pot with new strings
         * data/po/*.po: Updated translations from Launchpad.net Rosetta
